# QR_picture_detection

./: .gitignore  CATEGORY_PREPROCESSING.md  LICENSE  README.md  app.py  build_comparison_index.py  check_env.bat  compare_summaries.py  local_qr_web.py  pyproject.toml  requirements-full.txt  requirements.txt  run.bat  start_local_qr_web.bat  streamlit_app.py  summarize_results.py
.streamlit/: config.toml
qr_static_detector/: __init__.py  adaptive.py  comparison_analysis.py  comparison_charts.py  comparison_checklists.py  comparison_diagnostics.py  comparison_html.py  comparison_markdown.py  comparison_metrics.py  comparison_reporting.py  config.py  detector.py  detector_types.py  index_reporting.py  preprocess.py  report_styles.py  report_text.py  reporting.py  reporting_common.py  summary_html.py  summary_reporting.py  utils.py  visualize.py
qrcodes/: DATASET_README.md  notes.txt~
qrcodes/demo/: README.md
tests/: test_comparison_reporting.py  test_summary_reporting.py
